<resources>
    <string name="app_name">LogicaApp</string>
    <string name="title">Conjunction (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="submit">SUBMIT</string>

    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
